# arka-core-rust

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: crypto.rs  db.rs  jni_android.rs  lib.rs  native_ffi.rs
src/api/: audit.rs  autofill.rs  error.rs  generator.rs  mod.rs  vault.rs
