[package]
name = "rust_lib_arka"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.10.1"
getrandom = "0.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

# Smaller native libs for Android release builds.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
